refactor: refactor code & add unauthorized exception handler